# churn_prediction

./: .gitignore  README.md  churn_prediction.py  pyproject.toml  test_faiss.py  test_pipeline.py
config/: config_churn.yaml  config_recommender.yaml
embeddings/: course_features.csv  course_index.faiss  course_metadata.parquet  id_mapping.json
src/utils/: churn_predictor.py  course_embedder.py  course_feature_engineer.py  data_loader.py  embedding_store.py  feature_engineer.py
