[project]
name = "churn_prediction"
version = "0.1.0"
description = "Student dropout prediction using ML on OULAD dataset"
authors = [{name = "Elif Saracoglu"}]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas==2.2.0",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "imbalanced-learn==0.11.0",
    "pyyaml==6.0.1",
    "joblib==1.3.2",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
